# rgbd-calib

./: .gitignore  CMakeLists.txt  README.md  rgbd-calib.sublime-project  rgbd-calib.sublime-workspace
cmake/modules/: FindBoost.cmake  FindCGAL.cmake  FindDependency.cmake  FindPCL.cmake
data/: 30_init.poses  50.serial  51.ext3  51.serial  52.serial  52.yml  53.ext  53.ext2  53.serial  surface_50_51.ks  surface_52_53.ks
doc/: ubuntu.markup
framework/: ARTListener.cpp  ARTListener.hpp  Attributefinder.cpp  Attributefinder.hpp  CMakeLists.txt  CSVExporter.cpp  CSVExporter.hpp  ChessboardSampling.cpp  ChessboardSampling.hpp  ChronoMeter.cpp  ChronoMeter.hpp  DataTypes.cpp  DataTypes.hpp  FileBuffer.cpp  FileBuffer.hpp  FileValue.cpp  FileValue.hpp  GridFitter.cpp  GridFitter.hpp  LPCDataTypes.cpp  LPCDataTypes.hpp  LPCNearestNeighbourSearch.cpp  LPCNearestNeighbourSearch.hpp  MatrixInterpolation.cpp  MatrixInterpolation.hpp  NaturalNeighbourInterpolator.cpp  NaturalNeighbourInterpolator.hpp  NearestNeighbourSearch.cpp  NearestNeighbourSearch.hpp  OneEuroFilter.hpp  OneEuroFilterContainer.cpp  OneEuroFilterContainer.hpp  OpenCVChessboardCornerDetector.cpp  OpenCVChessboardCornerDetector.hpp  OpenCVHelper.cpp  OpenCVHelper.hpp  OpenCVUndistortion.cpp  OpenCVUndistortion.hpp  PlaneFit.cpp  PlaneFit.hpp  (+34 more)
source/: CMakeLists.txt  README.txt  calibrate.cpp  calibrate_intrinsic.cpp  convert_recording_to_point_cloud.cpp  display_rgbd_stream.cpp  display_sweep.cpp  evaluate.cpp  example.cpp  feedback_sender.cpp  initialize.cpp  large_point_cloud_compare.cpp  measure_pose_offset.cpp  play.cpp  play_sweep.cpp  poseoffset  record.cpp  remote_player.cpp  remote_recorder.cpp  rgbd_stream_to_point_cloud.cpp  rgbdir_viewer.cpp  send_recording_as_point_cloud.cpp  split_samples.cpp  stable_sampler.cpp  sweep_calibrate.cpp  sweep_sampler.cpp  sweep_stats.cpp  test_stuff.cpp  tests.cpp  tracker.cpp  uncompress_recording.cpp  viewer.cpp  voxelizer.cpp  zmq_point_cloud_sender.cpp  zmq_receiver.cpp  zmq_sender.cpp
utils/: dependencies.txt
